@@ -7,6 +7,7 @@
 * Bugfixes
 
   * XML fragments with namespaces do not raise an exception (regression in 1.4.0)
+  * Node#matches? works in nodes contained by a DocumentFragment. GH #158
 
 === 1.4.0 / 2009/10/30
 
